Added update but styling issue

--- a/exercise_tracker/templates/aroms_result.html
+++ b/exercise_tracker/templates/aroms_result.html
@@ -58,14 +58,9 @@
             data-aos="fade-up"
           >
             <div>
-              <h1>Your Final Report</h1>
-              <h2>
-                This is your achieved score for Excercise {{obj.exercisename}}
-              </h2>
-              <h2>Your total count was {{obj.counter}}</h2>
-              <h2>Your id was {{obj.exerciseid}}</h2>
-              <h2>Your total time was {{obj.timer}} seconds</h2>
-              <h2>Your total error was {{obj.error}}</h2>
+              <h3>Hey checkout your AROMS for {{obj.name}}</h3>
+              <h2>Min Angle {{obj.min}} degree</h2>
+              <h2>Max angle {{obj.max}} degree</h2>
               <a href="http://localhost:3000/excercise" class="download-btn"
                 ><i class="fas fa-backward"></i>Back to Exercise</a
               >
