--- a/exercise_tracker/templates/index11.html
+++ b/exercise_tracker/templates/index11.html
@@ -1,4 +1,6 @@
-{% extends "base.html" %} {% block content %}
+{% extends "base.html" %}
+{% block content %}
+
 <div class="container">
   <div class="row">
     <h1>This is Home {{res}}</h1>
