--- a/exercise_tracker/templates/lateralFlexion.html
+++ b/exercise_tracker/templates/lateralFlexion.html
@@ -3,17 +3,18 @@
   <div className="mx-3 card mt-4">
     <div class="row mt-3">
       <div class="col-9">
-        <img class="mt-3 text-center" src="{{ url_for('video2') }}" width="900px" />
+        <img class="mb-3 mt-1" src="{{ url_for('video3') }}" width="900px" />
       </div>
       <div class="col-3 mt-3">
-        <h3 class="mt-3 text-center">Squats Activity</h3>
+        <h3 class="mt-3 text-center">Lateral Flexsion</h3>
         <img
-            src="https://thumbs.gfycat.com/IllDifferentGnu-max-1mb.gif"
-            alt="This is gif"
-          />
+          class="mb-3"
+          src="https://media.giphy.com/media/YQ4EE1iBXyLacDRm8A/giphy.gif"
+          alt="This is gif"
+        />
         <div class="row">
           <div class="col-6 text-center">
-            <form method="post" action="{{ url_for('score') }}">
+            <form method="post" action="{{ url_for('complete') }}">
               <input
                 class="btn btn-danger btn-lg"
                 type="submit"
@@ -21,7 +22,13 @@
                 name="stop"
               />
             </form>
-            <a href="{{ url_for('exercise2',url=url) }}"><button>REFRESH</button></a>
+          </div>
+          <div class="col-6">
+            <a
+              class="btn btn-primary btn-lg"
+              href="{{ url_for('exercise3',url=url) }}"
+              >REFRESH</a
+            >
           </div>
           <div class="card mt-3">
             <h5 class="mt-2">Instructions</h5>
@@ -39,5 +46,3 @@
   </div>
 </div>
 {% endblock content %}
-
-
